deployment-all.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-rental-deployment
spec:
  selector:
    matchLabels:
      app: car-rental
  replicas: 2
  template:
    metadata:
      labels:
        app: car-rental
    spec:
      containers:
      - name: configuration-service
        image: saeedalbarhami/configuration-service
        ports:
        - containerPort: 8081
      - name: discovery-service
        image: saeedalbarhami/discovery-service
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: car-rental-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: car-rental
  ports:
  - name: configuration-port
    protocol: TCP
    port: 8081
  - name: discovery-port
    protocol: TCP
    port: 8082
