deployment-bookingservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
spec:
  selector:
    matchLabels:
      app: booking-service
  replicas: 2
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-service
        image: saeedalbarhami/booking-service
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: booking-service
  ports:
  - name: booking-port
    protocol: TCP
    port: 8085
