deployment-config.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-app
  namespace: micro-services
spec:
  selector:
    matchLabels:
      app: config-app
  replicas: 1
  template:
    metadata:
      labels:
        app: config-app
    spec:
      containers:
      - name: configuration-service
        image: saeedalbarhami/configuration-service
        ports:
        - containerPort: 8081
        imagePullPolicy: Always
        resources:
          limits:
            memory: 900Mi
          requests:
            memory: 500Mi


---
apiVersion: v1
kind: Service
metadata:
  name: config-app
  namespace: micro-services
spec:
  type: ClusterIP
  selector:
    app: config-app
  ports:
  - name: http
    protocol: TCP
    port: 8081
    targetPort: 8081
