deployment-discovery.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-service
spec:
  selector:
    matchLabels:
      app: discovery-service
  replicas: 2
  template:
    metadata:
      labels:
        app: discovery-service
    spec:
      containers:
      - name: discovery-service
        image: saeedalbarhami/discovery-service
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: discovery-service
  ports:
  - name: discovery-port
    protocol: TCP
    port: 8082
