deployment-gateway.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: micro-services
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: api-gateway
        image: saeedalbarhami/api-gateway
        ports:
        - containerPort: 8084
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 900m
            memory: 900Mi
          requests:
            cpu: 500m
            memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: micro-services
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
  - name: http
    protocol: TCP
    port: 8084
